src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated company.</description>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractEndDate__c</fullName>
        <description>Date on which the contract ends.</description>
        <inlineHelpText>Date on which the contract ends.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractFirstBillDate__c</fullName>
        <description>First date on which the contract is to be billed.</description>
        <inlineHelpText>First date on which the contract is to be billed.</inlineHelpText>
        <label>Contract First Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractStartDate__c</fullName>
        <description>Date from which billing can commence for the contract.</description>
        <inlineHelpText>Date from which billing can commence for the contract.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contract to which this opportunity relates.</description>
        <inlineHelpText>Lookup to the contract to which this opportunity relates.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>ffbc__Contract__c</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>RelatedOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__OriginalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the opportunity from which this opportunity originated.</description>
        <inlineHelpText>Lookup to the opportunity from which this opportunity originated.</inlineHelpText>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Original Opportunities</relationshipLabel>
        <relationshipName>OriginalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Covenant_Checks</fullName>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Covenant_Strength__c</columns>
        <columns>Covenant_Comments__c</columns>
        <columns>Covenant_Status__c</columns>
        <columns>SBQQ__PrimaryQuote__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Covenant_Status__c</field>
            <operation>equals</operation>
            <value>Raised</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Conventional</value>
        </filters>
        <label>Covenant Checks</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Infomation</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Region__c</columns>
        <columns>Primary_Property__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>Sub_Source__c</columns>
        <columns>Channel__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Use__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <label>Marketing Infomation</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Size_sq_ft__c</columns>
        <columns>Workstations__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Completed,Closed Lost</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Outstanding_Service_Referrals</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Data_Voice_Referral__c</columns>
        <columns>Furniture_Referral__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Conventional</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>Data_Voice_Referral__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Furniture_Referral__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Outstanding Service Referrals</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Conventional</fullName>
        <active>true</active>
        <businessProcess>Conventional Sales Process</businessProcess>
        <label>Conventional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_Rooms</fullName>
        <active>true</active>
        <businessProcess>Meeting Rooms Sales Process</businessProcess>
        <label>Meeting Rooms</label>
    </recordTypes>
    <recordTypes>
        <fullName>Serviced</fullName>
        <active>true</active>
        <businessProcess>Serviced Sales Process</businessProcess>
        <label>Serviced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual</fullName>
        <active>true</active>
        <businessProcess>Virtual Sales Process</businessProcess>
        <label>Virtual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agent_Broker_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Agent_Broker__c ), OR(ISPICKVAL( LeadSource, &apos;Agent&apos;), ISPICKVAL( LeadSource, &apos;Broker&apos;)))</errorConditionFormula>
        <errorDisplayField>Agent_Broker__c</errorDisplayField>
        <errorMessage>Field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Briefing_Statement_required</fullName>
        <active>true</active>
        <description>Provide additional information to the property management team, such as the customers nature of business, what they will be using the property for, which services they will using and how often, plus anything else you think will be useful for them to know</description>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &apos;Virtual&apos;,
  ISBLANK(Briefing_Statement__c),
  OR(
    ISPICKVAL(StageName, &apos;Terms Agreed&apos;),
    ISPICKVAL(StageName, &apos;Completed&apos;)
  )
)</errorConditionFormula>
        <errorDisplayField>Briefing_Statement__c</errorDisplayField>
        <errorMessage>Provide additional information to the property management team, such as the customers nature of business, what they will be using the property for, which services they will using and how often, plus anything else you think will be useful for them to know</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Lost_Fields_Validation</fullName>
        <active>true</active>
        <description>The &quot;Closed Lost Comment&quot; and &quot;Loss Reason&quot; fields filling check</description>
        <errorConditionFormula>ISPICKVAL( StageName , &quot;Closed Lost&quot;) &amp;&amp; ( ISPICKVAL( Closed_Lost_Reason__c , &quot;&quot;) )</errorConditionFormula>
        <errorMessage>You can&apos;t close Opportunity as lost without defined close reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Comments_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Closed_Lost_Comments__c) &amp;&amp;  ISPICKVAL(Closed_Lost_Reason__c, &quot;See Closed Lost Comments&quot;)</errorConditionFormula>
        <errorDisplayField>Closed_Lost_Comments__c</errorDisplayField>
        <errorMessage>Please write your comments here.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compliance_Check_Details_Required</fullName>
        <active>true</active>
        <description>Compliance Check Details field should not be blank when Compliance Check = No</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Virtual&apos; &amp;&amp;
ISPICKVAL(Compliance_Check_Complete__c, &apos;No&apos;) &amp;&amp;
ISBLANK( Compliance_Check_Details__c)</errorConditionFormula>
        <errorDisplayField>Compliance_Check_Details__c</errorDisplayField>
        <errorMessage>Please enter Compliance Check Details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complience_Check_Required</fullName>
        <active>true</active>
        <description>Compliance Check should be filled in for the following statuses:  &apos;Check Complete&apos;, &apos;Terms Agreed&apos; or &apos;Completed&apos;</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Virtual&apos; &amp;&amp;
ISPICKVAL(Compliance_Check_Complete__c, &apos;&apos;) &amp;&amp;
(
 ISPICKVAL(StageName, &apos;Check Complete&apos;) || 
 ISPICKVAL(StageName, &apos;Terms Agreed&apos;) || 
 ISPICKVAL(StageName,&apos;Completed&apos;)
)</errorConditionFormula>
        <errorDisplayField>Compliance_Check_Complete__c</errorDisplayField>
        <errorMessage>This field is required for the current Opportunity status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Covenant_Strength_Over_100</fullName>
        <active>true</active>
        <errorConditionFormula>Covenant_Strength__c &gt; 100</errorConditionFormula>
        <errorDisplayField>Covenant_Strength__c</errorDisplayField>
        <errorMessage>Covenant Strength cannot be over 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Referral_required</fullName>
        <active>true</active>
        <description>If Lead Source = &apos;Referral&apos; AND Sub Source = &apos;Customer&apos;, Customer Referral cannot be blank.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL(LeadSource, &apos;Referral&apos;), 
  ISPICKVAL(Sub_Source__c, &apos;Customer&apos;), 
  ISBLANK(Customer_Referral__c) 
)</errorConditionFormula>
        <errorDisplayField>Customer_Referral__c</errorDisplayField>
        <errorMessage>Field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Data_Voice_From_No_to_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISCHANGED( Data_Voice_Referral__c ),
            ISPICKVAL( PRIORVALUE( Data_Voice_Referral__c ) , &apos;No&apos; ),
            ISPICKVAL( Data_Voice_Referral__c , &apos;&apos;)
            )</errorConditionFormula>
        <errorDisplayField>Data_Voice_Referral__c</errorDisplayField>
        <errorMessage>You may now only change this field to &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Data_Voice_From_Yes_to_No_or_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
            AND(
            ISCHANGED( Data_Voice_Referral__c ),
            ISPICKVAL( PRIORVALUE( Data_Voice_Referral__c ) , &apos;Yes&apos; ),
            OR(
            ISPICKVAL( Data_Voice_Referral__c , &apos;No&apos;),
            ISPICKVAL( Data_Voice_Referral__c , &apos;&apos;)
            )
            )
            )</errorConditionFormula>
        <errorDisplayField>Data_Voice_Referral__c</errorDisplayField>
        <errorMessage>You are unable to change this field as the supplier has already been notified, please contact the supplier directly to cancel.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Data_Voice_Supplier_Cannot_be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISPICKVAL( Data_Voice_Referral__c , &apos;Yes&apos;),
            ISBLANK( Data_Voice_Supplier_Contact__c )
            )</errorConditionFormula>
        <errorDisplayField>Data_Voice_Supplier_Contact__c</errorDisplayField>
        <errorMessage>Please select an active data/voice supplier contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deposit_Paid_required</fullName>
        <active>true</active>
        <description>Validation rule that virtual opportunity cannot move to stage &apos;Complete&apos; if deposit paid checkbox = false</description>
        <errorConditionFormula>AND( 
RecordType.DeveloperName = &apos;Virtual&apos;, 
NOT(Deposit_Paid__c), 
ISPICKVAL(StageName, &apos;Completed&apos;)
)</errorConditionFormula>
        <errorDisplayField>Deposit_Paid__c</errorDisplayField>
        <errorMessage>Deposit Paid is required to Complete the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employee_Referral_Empty</fullName>
        <active>true</active>
        <description>&quot;Employee Referral&quot; should be required if &quot;Referral&quot; Lead Source is selected with &quot;Employee &quot; subsource</description>
        <errorConditionFormula>AND( ISBLANK( Employee_Referral1__c ) , ISPICKVAL( LeadSource , &apos;Referral&apos;), ISPICKVAL( Sub_Source__c , &apos;Employee&apos;) )</errorConditionFormula>
        <errorDisplayField>Employee_Referral1__c</errorDisplayField>
        <errorMessage>Employee Referral field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Furniture_From_No_to_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISCHANGED( Furniture_Referral__c ),
            ISPICKVAL( PRIORVALUE( Furniture_Referral__c ) , &apos;No&apos; ),
            ISPICKVAL( Furniture_Referral__c , &apos;&apos;)
            )</errorConditionFormula>
        <errorDisplayField>Furniture_Referral__c</errorDisplayField>
        <errorMessage>You may now only change this field to &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Furniture_From_Yes_to_No_or_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
            AND(
            ISCHANGED( Furniture_Referral__c ),
            ISPICKVAL( PRIORVALUE( Furniture_Referral__c ) , &apos;Yes&apos; ),
            OR(
            ISPICKVAL( Furniture_Referral__c , &apos;No&apos;),
            ISPICKVAL( Furniture_Referral__c , &apos;&apos;)
            )
            )
            )</errorConditionFormula>
        <errorDisplayField>Furniture_Referral__c</errorDisplayField>
        <errorMessage>You are unable to change this field as the supplier has already been notified, please contact the supplier directly to cancel.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Furniture_Supplier_Cannot_be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISPICKVAL( Furniture_Referral__c , &apos;Yes&apos;),
            ISBLANK( Furniture_Supplier_Contact__c )
            )</errorConditionFormula>
        <errorDisplayField>Furniture_Supplier_Contact__c</errorDisplayField>
        <errorMessage>Please select an active furniture supplier contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Data_Voice_Referral_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISPICKVAL( Data_Voice_Referral__c , &apos;No&apos;),
            ISPICKVAL( No_Data_Voice_Referral_Reason__c , &apos;&apos;)
            )</errorConditionFormula>
        <errorDisplayField>No_Data_Voice_Referral_Reason__c</errorDisplayField>
        <errorMessage>Please enter a reason why data/voice has not been referred.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Furniture_Referral_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISPICKVAL( Furniture_Referral__c , &apos;No&apos;),
            ISPICKVAL( No_Furniture_Referral_Reason__c , &apos;&apos;)
            )</errorConditionFormula>
        <errorDisplayField>No_Furniture_Referral_Reason__c</errorDisplayField>
        <errorMessage>Please enter a reason why furniture has not been referred.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referral_Contact_Cannot_be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            OR(
            ISPICKVAL( Data_Voice_Referral__c , &apos;Yes&apos;),
            ISPICKVAL( Furniture_Referral__c , &apos;Yes&apos;)
            ),
            ISBLANK( Referral_Contact__c )
            )</errorConditionFormula>
        <errorDisplayField>Referral_Contact__c</errorDisplayField>
        <errorMessage>Please enter an active contact that the supplier will contact to discuss their services.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Referrals_Inventory_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Data_Voice_Referral__c, &apos;Yes&apos;),
        ISPICKVAL(Furniture_Referral__c, &apos;Yes&apos;)
    ),
    ISBLANK(Referral_Inventory__c)
)</errorConditionFormula>
        <errorDisplayField>Referral_Inventory__c</errorDisplayField>
        <errorMessage>Please enter the inventory the service referral is related to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Size_sq_ft_0_or_more</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Size_sq_ft__c &lt; 0, NOT(ISBLANK(Size_sq_ft__c )))</errorConditionFormula>
        <errorDisplayField>Size_sq_ft__c</errorDisplayField>
        <errorMessage>Must be 0 or more.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Source_Must_Be_Agent_Broker</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Account.RecordType.DeveloperName = &apos;Agent_Broker&apos;,
    NOT(
        OR( 
           ISPICKVAL(LeadSource , &apos;Agent&apos;),
           ISPICKVAL(LeadSource , &apos;Broker&apos;)
           )
       )
   )</errorConditionFormula>
        <errorDisplayField>LeadSource</errorDisplayField>
        <errorMessage>Lead Source should be Agent or Broker.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Use_empty_for_Retail_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT(Use__c) == &apos;&apos;, ISPICKVAL(Product__c, &apos;Retail&apos;))</errorConditionFormula>
        <errorMessage>Use value must be specified if Product is Retail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Virtual_Compliance_Approval_Required</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Virtual&apos; &amp;&amp;
!Virtual_Compliance_Approval_Complete__c &amp;&amp;
ISPICkVAL(Compliance_Check_Complete__c, &apos;No&apos;) &amp;&amp;
!ISPICKVAL(StageName, &apos;Qualifield&apos;) &amp;&amp; 
!ISPICKVAL(StageName, &apos;Meeting Booked&apos;)</errorConditionFormula>
        <errorMessage>Compliance Check Approval Required to move to the next stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Workstations_0_or_more</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Workstations__c &lt; 0, NOT(ISBLANK(Workstations__c )))</errorConditionFormula>
        <errorDisplayField>Workstations__c</errorDisplayField>
        <errorMessage>Must be 0 or more.</errorMessage>
    </validationRules>
</CustomObject>